Sugati/src/objects/Transfer__c.object
<CustomObject>
    <description>Stores a list of transfer options for holidays.</description>
    <fields>
        <fullName>T_City_Place__c</fullName>
        <label>City_Place</label>
        <referenceTo>City_Place__c</referenceTo>
        <relationshipLabel>Transfers</relationshipLabel>
        <relationshipName>Transfers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>T_Client_Notes__c</fullName>
        <label>Client Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>T_CpntCode_c__c</fullName>
        <label>CpntCode__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>T_From_Place__c</fullName>
        <label>From Place</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>T_Our_Opinion__c</fullName>
        <label>Our Opinion</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>T_Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>T_Quote__c</fullName>
        <label>Quote</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>T_Sales_Tips__c</fullName>
        <label>Sales Tips</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>T_SeqNo__c</fullName>
        <label>SeqNo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_Short_Form__c</fullName>
        <label>Short Form</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>T_To_Place__c</fullName>
        <label>To Place</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Web__c</fullName>
        <label>Web</label>
        <type>Url</type>
    </fields>
    <label>Transfer</label>
    <nameField>
        <displayFormat>T-{0000000000}</displayFormat>
        <label>Transfer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transfers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>